[package]
name = "biowatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
postgres = "0.19.7"
chrono = "0.4.34"
csv = "1.3.0"
